# iFuyo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pom.xml  requirements.txt
src/main/cpp/cache/: Cache.cpp  Cache.h
src/main/cpp/jni/: JNI.cpp
src/main/kotlin/: MainKt.java
src/main/kotlin/GUI/Login/: Login.java  Login.jfd
src/main/kotlin/GUI/Menu/: Menu.java  Menu.jfd
src/main/kotlin/GUI/Profile/: Profile.java  Profile.jfd
src/main/kotlin/com/github/ifuyo/: Main.java  Main.kt
src/main/kotlin/com/github/ifuyo/apps/: Api.java
src/main/kotlin/com/github/ifuyo/apps/login/: LoginController.java  LoginModel.java  LoginView.java
src/main/kotlin/com/github/ifuyo/cache/: CacheWrapper.java
src/main/kotlin/com/github/ifuyo/config/: Settings.java
src/main/kotlin/com/github/ifuyo/entity/: DeepSeekEntity.java  LoginEntity.java  StudentEntity.java  StudentInfo.java
src/main/kotlin/com/github/ifuyo/error/: CustomException.java  ExceptionHandler.java
src/main/kotlin/com/github/ifuyo/error/database/: DatabaseException.java
src/main/kotlin/com/github/ifuyo/error/http/: HttpsRequestException.java
src/main/kotlin/com/github/ifuyo/ui/qt/: login.ui
src/main/kotlin/com/github/ifuyo/utils/: EnvConfig.java
src/main/kotlin/com/github/ifuyo/utils/cache/: ImageCache.java  ImageCallback.java
src/main/resources/: config.properties
src/main/resources/certs/: ca-bundle.crt
src/main/resources/cpp/cache/: ImageCache.cpp
src/main/resources/python/: login_bitzh.py
src/main/resources/python/logs/: script_log.txt
(+32 files in other folders)
